test/tests/save-dts-files/expectedOutput/patch0/.output/bundle.output.txt
C:\Data\GitHub\ts-css-loader\test\.test\save-dts-files\.output\bundle.js:73
exports = module.exports = __webpack_require__(!(function webpackMissingModule() { var e = new Error("Cannot find module \"../../../../node_modules/css-loader/lib/css-base.js\""); e.code = 'MODULE_NOT_FOUND'; throw e; }()))(undefined);
                                                                                                                                                                                                                 ^

Error: Cannot find module "../../../../node_modules/css-loader/lib/css-base.js"
    at webpackMissingModule (C:\Data\GitHub\ts-css-loader\test\.test\save-dts-files\.output\bundle.js:73:92)
    at Object.<anonymous> (C:\Data\GitHub\ts-css-loader\test\.test\save-dts-files\.output\bundle.js:73:220)
    at __webpack_require__ (C:\Data\GitHub\ts-css-loader\test\.test\save-dts-files\.output\bundle.js:20:30)
    at Object.<anonymous> (C:\Data\GitHub\ts-css-loader\test\.test\save-dts-files\.output\bundle.js:164:19)
    at __webpack_require__ (C:\Data\GitHub\ts-css-loader\test\.test\save-dts-files\.output\bundle.js:20:30)
    at C:\Data\GitHub\ts-css-loader\test\.test\save-dts-files\.output\bundle.js:66:18
    at Object.<anonymous> (C:\Data\GitHub\ts-css-loader\test\.test\save-dts-files\.output\bundle.js:69:10)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)

child process exited with code 1
